{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 285,
  "lineage": "9523edea-f69e-c01f-b51c-07972b20f6a5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-server-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:vpc/vpc-01e9555e365b95ce6",
            "cidr_block": "30.30.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-092d0e45507b22f6b",
                "cidr_block": "30.30.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b540e7cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc-server-test-vpc"
                ]
              }
            ],
            "id": "vpc-01e9555e365b95ce6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09273003688c9ab11",
            "owner_id": "214952093188",
            "tags": {
              "Name": "vpc-server-test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ec2_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:loadbalancer/app/ec2-alb/40f089ef924c6f92",
            "arn_suffix": "app/ec2-alb/40f089ef924c6f92",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ec2-alb-1695754060.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:loadbalancer/app/ec2-alb/40f089ef924c6f92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0671db301c1858857"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006ff7bee3dbb3966"
              },
              {
                "subnet_id": "subnet-0383baa175577cfeb"
              },
              {
                "subnet_id": "subnet-0c4dfd9b53afd0e2d"
              }
            ],
            "subnets": [
              "subnet-006ff7bee3dbb3966",
              "subnet-0383baa175577cfeb",
              "subnet-0c4dfd9b53afd0e2d"
            ],
            "tags": {
              "Name": "ec2-alb"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "ec2-alb",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "vpc_id": "vpc-01e9555e365b95ce6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test",
            "module.sg.aws_security_group.server-test-alb-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:listener/app/ec2-alb/40f089ef924c6f92/4f5e40f152cd03b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:listener/app/ec2-alb/40f089ef924c6f92/4f5e40f152cd03b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:loadbalancer/app/ec2-alb/40f089ef924c6f92",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test",
            "module.alb.aws_lb.ec2_alb",
            "module.alb.aws_lb_target_group.ec2_tg",
            "module.sg.aws_security_group.server-test-alb-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
            "arn_suffix": "targetgroup/ec2-alb/213b464f36f60803",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ec2-alb"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "ec2-alb",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01e9555e365b95ce6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803-20250716160526557400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
            "target_id": "i-032bad93f0a43befb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.alb.aws_lb_target_group.ec2_tg",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_instance.server-test",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803-20250716160526827500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
            "target_id": "i-0b17484c405ca0958"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.alb.aws_lb_target_group.ec2_tg",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_instance.server-test",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803-20250716160526280900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:214952093188:targetgroup/ec2-alb/213b464f36f60803",
            "target_id": "i-004717a553c467540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.alb.aws_lb_target_group.ec2_tg",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_instance.server-test",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05dc67d613ea82750",
            "arn": "arn:aws:ec2:us-west-2:214952093188:instance/i-032bad93f0a43befb",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile-30.30.0.15",
            "id": "i-032bad93f0a43befb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-server-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03cadf10f330d8480",
            "private_dns": "ip-30-30-0-15.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.30.0.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02fa993ef19be3085",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-045bb43e6fd41a48c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0383baa175577cfeb",
            "tags": {
              "Name": "server-test-00"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "server-test-00",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045bb43e6fd41a48c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05dc67d613ea82750",
            "arn": "arn:aws:ec2:us-west-2:214952093188:instance/i-0b17484c405ca0958",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile-30.30.16.15",
            "id": "i-0b17484c405ca0958",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-server-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050aac60735afd7c2",
            "private_dns": "ip-30-30-16-15.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.30.16.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8a49289ecf69fa3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-045bb43e6fd41a48c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006ff7bee3dbb3966",
            "tags": {
              "Name": "server-test-01"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "server-test-01",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045bb43e6fd41a48c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05dc67d613ea82750",
            "arn": "arn:aws:ec2:us-west-2:214952093188:instance/i-004717a553c467540",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile-30.30.32.15",
            "id": "i-004717a553c467540",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-server-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086f1fe678dc87cdd",
            "private_dns": "ip-30-30-32-15.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.30.32.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad53309e1f6677e7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-045bb43e6fd41a48c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4dfd9b53afd0e2d",
            "tags": {
              "Name": "server-test-02"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "server-test-02",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045bb43e6fd41a48c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_iam_role.existing_role",
            "data.aws_key_pair.existing_key",
            "data.aws_vpc.vpc-server-test",
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-test-alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:security-group/sg-0671db301c1858857",
            "description": "Grupo de seguridad para ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0671db301c1858857",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_server_test_alb",
            "name_prefix": "",
            "owner_id": "214952093188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "alb-sg",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e9555e365b95ce6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-test-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:security-group/sg-045bb43e6fd41a48c",
            "description": "Creacion de grupo de seguridad para HTTP/HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045bb43e6fd41a48c",
            "ingress": [],
            "name": "sg_server_test",
            "name_prefix": "",
            "owner_id": "214952093188",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e9555e365b95ce6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-474173825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-045bb43e6fd41a48c",
            "security_group_rule_id": "sgr-06bf9a6965ef6bebd",
            "self": false,
            "source_security_group_id": "sg-0671db301c1858857",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.vpc-server-test",
            "module.sg.aws_security_group.server-test-alb-security-group",
            "module.sg.aws_security_group.server-test-security-group"
          ]
        }
      ]
    }
  ]
}